--- a/docker_registry_face/templates/tag_list.html
+++ b/docker_registry_face/templates/tag_list.html
@@ -156,7 +156,7 @@
                         })
                         tree_view.push({
                             "text":value.tag,
-                            "tags":[value.layer_count + " Layers",(tag_size / 1024 / 1024).toFixed(2) + " MB"]
+                            "tags":[value.layer_count + " Layers",(tag_size / 1024 / 1024).toFixed(2) + " MB",value.last_modified]
                         })
                     });
                     if (tree_view.length) {
