update verify ssl

--- a/docker_registry_face/templates/image_list.html
+++ b/docker_registry_face/templates/image_list.html
@@ -93,7 +93,7 @@
             function(response) {
                 response.json().then(function(data) {
                 if (response.status == 200) {
-                    console.log(data)
+                    // console.log(data)
                     var tree_view = []
                     $.each(data, function(index, fvalue, array) {
                         var img = {}
